[workspace]
members = [
    "poseidon-circuit",
    "poseidon-base"
]
resolver = "2"

[workspace.dependencies]
bencher = "0.1"
bitvec = "1"
ff = "0.13"
halo2curves = { git = 'https://github.com/privacy-scaling-explorations/halo2curves', tag = "0.3.3" }
halo2_proofs = { git = "https://github.com/snarkify/halo2", branch = "snarkify/dev.scroll.alpha.2" }
lazy_static = "1.4"
log = "0.4"
plotters = "0.3"
rand = "0.8"
rand_chacha = "0.3.0"
rand_xorshift = "0.3"
subtle = "2"
thiserror = "1.0"

[profile.test]
opt-level = 3
debug-assertions = true

[patch."https://github.com/privacy-scaling-explorations/halo2.git"]
halo2_proofs = { git = "https://github.com/snarkify/halo2", branch = "snarkify/dev.scroll.alpha.2" }
